--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,8 +49,17 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 
+@supports (corner-shape: squircle) {
+  :root {
+    --radius: 1.25rem!important;
+  }
+  * {
+    corner-shape: squircle;
+  }
+}
+
 :root {
-  --radius: 1.25rem;
+  --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
   --card: oklch(1 0 0);
@@ -126,10 +135,6 @@
   body {
     @apply bg-background text-foreground;
   }
-}
-
-* {
-  corner-shape: squircle
 }
 
 /* Chroma text effect - animated shimmer gradient */
